Add styles to html

--- a/recipes/burguer.html
+++ b/recipes/burguer.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Burguer</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     
-    <body>
-        <h1>Burguer</h1>
+    <body class="beige">
+        <h1 class="header">Burguer</h1>
         <img src="https://www.allrecipes.com/thmb/GdxmXDvK0Otv5mo-y5vdCxEQwLE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Smash-Burgers-2000-b7d0c27b259a40df8a94f75a7675b4df.jpg" alt="Burguer">
         <h2>Description</h2>
         <p>This is a burguer recipe found on <strong>allrecipes.com</strong> titled as <strong>"Homemade Smash Burgers"</strong>. </p>
