--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     
-    <body>
-        <h1>Chicken</h1>
+    <body class="beige">
+        <h1 class="header">Chicken</h1>
         <img src="https://www.allrecipes.com/thmb/zzddHDy95yQuHfulsClNoptUTeg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4626231-copycat-chipotle-chicken-Buckwheat-Queen-1x1-1-c20874b726da43c1b2178fd0da269050.jpg" alt="Chicken">
         <h2>Description</h2>
         <p>This is a chicken recipe found on <strong>allrecipes.com</strong> titled as <strong>"Copycat Chipotle Chicken"</strong>. </p>
