--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 id="odin">Odin Recipes</h1>
+        <ul class="center">
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/burguer.html">Burguer</a></li>
             <li><a href="recipes/chicken.html">Chicken</a></li>
