--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     
-    <body>
-        <h1>Lasagna</h1>
+    <body class="beige">
+        <h1 class="header">Lasagna</h1>
         <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Lasagna">
         <h2>Description</h2>
         <p>This is a lasagna recipe found on <strong>allrecipes.com</strong> titled as <strong>"World's Best Lasagna"</strong>. </p>
