--- a/recipes/burguer.html
+++ b/recipes/burguer.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     
-    <body class="beige">
+    <body>
         <h1 class="header">Burguer</h1>
-        <img src="https://www.allrecipes.com/thmb/GdxmXDvK0Otv5mo-y5vdCxEQwLE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Smash-Burgers-2000-b7d0c27b259a40df8a94f75a7675b4df.jpg" alt="Burguer">
+        <img src="https://www.allrecipes.com/thmb/GdxmXDvK0Otv5mo-y5vdCxEQwLE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Smash-Burgers-2000-b7d0c27b259a40df8a94f75a7675b4df.jpg" alt="Burguer" class="center bottom">
         <h2>Description</h2>
-        <p>This is a burguer recipe found on <strong>allrecipes.com</strong> titled as <strong>"Homemade Smash Burgers"</strong>. </p>
+        <p class="bottom">This is a burguer recipe found on <strong>allrecipes.com</strong> titled as <strong>"Homemade Smash Burgers"</strong>. </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="bottom">
             <li>4 hamburger buns</li>
             <li>2 tablespoons butter, softened, or as needed</li>
             <li>1 pound ground chuck beef (80% lean)</li>
@@ -22,7 +22,7 @@
             <li>burger toppings of choice</li>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class="bottom">
             <li>Preheat an outdoor grill for high heat and lightly oil the grate. Set a cast iron flat-top griddle or large cast iron skillet onto the grill and preheat until smoking.</li>
             <li>Spread butter on the inside of the buns and toast on the flat-top until lightly browned. Set aside.</li>
             <li>Form meat into 8 loosely-packed balls, 2 ounces each. Do not pack the meat tightly, as this will prevent it from smashing properly. Place each ball on the hot flat-top, cover with a piece of parchment (to prevent sticking to the spatula; re-use each parchment square on a second patty) and immediately smash down to a 1/4 inch thickness using 2 stiff, sturdy spatulas that are criss-crossed to get proper leverage as you press down. You may also use the bottom of small skillet. Sprinkle the meat with salt.</li>
