--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     
-    <body class="beige">
+    <body>
         <h1 class="header">Chicken</h1>
-        <img src="https://www.allrecipes.com/thmb/zzddHDy95yQuHfulsClNoptUTeg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4626231-copycat-chipotle-chicken-Buckwheat-Queen-1x1-1-c20874b726da43c1b2178fd0da269050.jpg" alt="Chicken">
+        <img src="https://www.allrecipes.com/thmb/zzddHDy95yQuHfulsClNoptUTeg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4626231-copycat-chipotle-chicken-Buckwheat-Queen-1x1-1-c20874b726da43c1b2178fd0da269050.jpg" alt="Chicken" class="center bottom">
         <h2>Description</h2>
-        <p>This is a chicken recipe found on <strong>allrecipes.com</strong> titled as <strong>"Copycat Chipotle Chicken"</strong>. </p>
+        <p class="bottom">This is a chicken recipe found on <strong>allrecipes.com</strong> titled as <strong>"Copycat Chipotle Chicken"</strong>. </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="bottom">
             <li>1 ounce dried chipotle chile pepper</li>
             <li>1 ounce dried ancho chile pepper</li>
             <li>½ cup water</li>
@@ -25,8 +25,8 @@
             <li>2 tablespoons olive oil</li>
             <li>2 ½ pounds skinless, boneless chicken thighs</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 >Steps</h3>
+        <ol class="bottom">
             <li>Place chipotle and ancho chile peppers in a shallow bowl; pour in water. Cover the bowl and let sit at room temperature until peppers are softened, 10 to 12 hours. Drain water and remove seeds from peppers.</li>
             <li>Blend chile peppers, red onion, garlic, sea salt, cumin, oregano, and black pepper in a blender until a coarse paste forms; add olive oil and blend until marinade is smooth.</li>
             <li>Place chicken thighs between 2 sheets of heavy plastic on a solid, level surface. Firmly pound chicken with the smooth side of a meat mallet to a 1/2-inch thickness.</li>
