--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     
-    <body class="beige">
+    <body>
         <h1 class="header">Lasagna</h1>
-        <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Lasagna">
+        <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Lasagna" class="center bottom">
         <h2>Description</h2>
-        <p>This is a lasagna recipe found on <strong>allrecipes.com</strong> titled as <strong>"World's Best Lasagna"</strong>. </p>
+        <p class="bottom">This is a lasagna recipe found on <strong>allrecipes.com</strong> titled as <strong>"World's Best Lasagna"</strong>. </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="bottom">
             <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
             <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
             <li><strong>Tomato products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
@@ -23,7 +23,7 @@
             <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class="bottom">
             <li>Make the meat sauce.</li>
             <li>Cook the noodles.</li>
             <li>Make the ricotta mixture.</li>
@@ -32,7 +32,7 @@
             <li>Let the lasagna rest before serving.</li>
         </ol>
         <h3>How to Layer Lasagna</h3>
-        <ol>
+        <ol class="bottom">
             <li>Meat sauce</li>
             <li>Noodles</li>
             <li>Ricotta mixture</li>
